fixed spacing between main-banner and about section

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ nav a:hover{
   justify-content: space-between;
   align-items: center;
   /* background: rgba(255, 192, 203, 0.356); */
-  height: 480px;
+  height: 26vw;
 }
 #banner-figure{
   margin-top: -50px;
@@ -191,7 +191,7 @@ nav a:hover{
 @media screen and (max-width: 920px) {
   #main-banner{
     flex-direction: column;
-    height: auto;
+    height: 350px;
   }
   #banner-content{
     width: 100%;
@@ -217,6 +217,23 @@ nav a:hover{
     width: 90%;
     margin-right: 0;
   }
+}
+@media screen and (max-width: 800px) {
+  /* #about{
+    border: 1px solid purple;
+    margin: 0;
+
+  }
+  #main-banner{
+    border:1px solid red;
+    height: 350px
+  }
+  #mobile-about{
+    border:1px solid blue;
+  } */
+  /* #banner-content{
+    padding: 0;
+  } */
 }
 /*-- END MAIN BANNER --*/
 /*-- ABOUT --*/
@@ -286,22 +303,25 @@ nav a:hover{
     padding: 40px 0;
   }
   #mobile-about h1{
+    width: 100%;
+    border: 1px solid red;
     font-size: 20px;
-    padding-bottom: 50px;
+    padding: 40px 0;
   }
   #mobile-about img{
-    width: 300px;
-    height: 300px;
-    border-radius: 500px;
+    width: 40%;
+    height: 40%;
+    border-radius: 100%;
     float: left;
     shape-outside: circle();
-    padding-right: 20px;
+    padding: 20px;
   }
   #mobile-about p{
     text-align: left;
   }
  
 }
+
 /*-- END ABOUT --*/
 /*-- PROJECTS --*/
 #projects{
